# airbnb-clone-backend

./: README.md  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: permissions.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_rename_experice_experience.py  0003_alter_perk_details.py  0004_alter_perk_details_alter_perk_explanation.py  0005_experience_category.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night_and_more.py
medias/: admin.py  models.py  serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py  0003_alter_photo_experience_alter_photo_room.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_room.py
rooms/: admin.py  models.py  queries.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_room_name.py  0004_alter_amenity_options.py  0005_room_category.py  (+1 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+5 files in other folders)
